kube/api/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: api
  labels:
    app: api
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:      
    
      imagePullSecrets:
        - name: regcred

      containers:
        - name: api
          image: registry.ivy.cx/api:latest
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
