kube/api/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: api
  labels:
    app: api
spec:
  type: NodePort
  ports:
   - port: 80
     targetPort: 80
  selector:
   app: api
